Add OAuth2 login support with Google integration